<resources>
    <string name="app_name">Dziczyzna</string>

    <!-- LOGIN -->
    <string name="login_nick">Podaj swój nick</string>
    <string name="login_continue">Zaloguj</string>
    <string name="login_title_part_one">Namierz</string>
    <string name="login_title_part_two">Dzika</string>
    <string name="login_error">Wpisany nick jest już zajęty</string>

    <!-- COMMON -->
    <string name="io_error">Wystąpił problem z połączeniem sieciowym, spróbuj ponownie.</string>
    <string name="try_again">Spróbuj ponownie</string>

    <!-- ONBOARDING -->
    <string name="main_title">Dodaj zgłoszenie.</string>
    <string name="main_subtitle">To łatwe, wypełnij parę pól, a my zajmniemy się resztą.</string>

    <!-- REPORT -->
    <string name="new_report">Nowe zgłoszenie</string>
    <string name="pig_type">Rodzaj zwierzyny</string>
    <string name="is_alive_pig">Żywy</string>
    <string name="is_death_pig">Padły/truchło</string>
    <string name="localization">Lokacja</string>
    <string name="time">Czas</string>
    <string name="photo">Zdjęcie</string>
    <string name="add_photo">Dodaj zdjęcie</string>
    <string name="send_report">Wyślij zgłoszenie</string>
    <string name="pig_single">Samotny Knur</string>
    <string name="pig_many">Locha i młode</string>
    <string name="pig_herd">Stado</string>
    <string name="sent_photo_success">Zdjęcie zostało wysłane</string>
    <string name="sent_photo_failed">Wysyłanie zdjęcia nie powiodło się.</string>
    <string name="sent_report_failed">Wysyłanie zgłoszenia nie powiodło się.</string>
    <string name="sending_report">Twoje zgłoszenie jest wysyłane.</string>


    <!-- CONFIRMATION -->
    <string name="success">Zgłoszono</string>
    <string name="thanks">Dziękujemy!</string>
    <string name="info">To bardzo istotne dla Społeczeństwa informacja w walce z ASF.</string>
    <string name="gift">i... Nagroda</string>
    <string name="gift_info">Zostałeś najczęstrzym zgłaszającym w %s i dostajesz miano:</string>
    <string name="more">Po więcej informacji zapraszamy na:</string>
    <string name="more_www">dzikjestdziki.gov.pl</string>


    <!-- ONBOARDING -->
    <string name="next">Dalej</string>
    <string name="start">Zaczynamy</string>
    <string name="onboarding_one_title">Widzisz dziki w okolicy?</string>
    <string name="onboarding_two_title">Dzik jest dziki, dzik jest zły!</string>
    <string name="onboarding_three_title">Monitoruj sytuację.</string>
    <string name="onboarding_one_subtitle">Czy po Twojej okolicy nocą hasa za dużo dzików? Nasza aplikacja im pomoże!</string>
    <string name="onboarding_two_subtitle">Te zdrowe są fajne. Ale wiele z nich ma chorobę ASF, która zagraża hodowli
        trzody chlewnej.</string>
    <string name="onboarding_three_subtitle">Przedstawiamy Ci dane, które pokażą zbliżające się zagrożenia ASF.</string>


</resources>